--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,7 @@ a {
   width: 100%;
 }
 
-#fileName{
+.fileName{
   background-color: transparent;
   box-shadow: inset 0 0 0 1px rgba(112, 112, 112, 0.25);
   color: #666f77 !important;
@@ -92,14 +92,14 @@ a {
     width: 100%;
     background-color: #ddd;
   }
-  #upload_list{
+  .upload_list{
     background-color: #629DD1;
-    color: white !important;
+    color: white;
     cursor: pointer;
   }
-  #upload_list:hover{
+  .upload_list:hover{
     box-shadow: inset 0 0 0 1px #629DD1;
-    color:  #629DD1 !important;
+    color:  #629DD1;
     background-color: transparent;
     transition:all 300ms;
   }  
@@ -111,17 +111,17 @@ a {
   }
   .enabled{
     box-shadow: inset 0 0 0 1px #629DD1;
-    color:  #629DD1 !important;
+    color:  #629DD1;
     background-color: transparent;
     cursor: pointer;
   }
   .enabled:hover{
     background-color: #629DD1;
-    color: white !important;
+    color: white;
     transition:all 300ms;
   }
   
-  #uploadBar {
+  .uploadBar {
     width: 10%;
     height: 30px;
     background-color: #4CAF50;
@@ -130,7 +130,7 @@ a {
     color: white;
   }
 
-  #downloadBar {
+  .downloadBar {
     width: 10%;
     height: 30px;
     background-color: rgb(55, 59, 124);
@@ -138,7 +138,7 @@ a {
     line-height: 30px;
     color: white;
   }
-  #errors {
+  .errors {
     text-align: center;
     color : red;
     font-weight: 300;
